--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,8 @@
         "/home/lc/mp_ws/devel/lib/python3/dist-packages",
         "/home/lc/mc_simu_ws/devel/lib/python3/dist-packages",
         "/opt/ros/noetic/lib/python3/dist-packages"
-    ]
+    ],
+    "files.associations": {
+        "regex": "cpp"
+    }
 }
